Make sure canceling a schedule entry does not create a transaction

The cancel transaction is disabled in the background in the
kgloballedgerview code. This causes the cancel operation to fail.
Enabling it after this solves the problem.

BUG: 430409
FIXED-IN: 5.1.1